<resources>
    <string name="about_dialog_title">About Activity Manager</string>
    <string name="app_name">My Tasks</string>
    <string name="caledar">Calendar</string>
    <string name="editing_activity_activity">EditingActivity</string>
    <string name="name_activity_home">Home</string>
    <string name="name_activity_new_category">New Category</string>
    <string name="menu_config">Settings</string>
    <string name="menu_category">Categories</string>
    <string name="action_settings">Settings</string>
    <string name="menu_activities">Activities</string>
    <string name="menu_events">Events</string>
    <string name="menu_home">Home</string>
    <string name="update_category1">Update category</string>
    <string name="menu_event">Events</string>
    <string name="menu_graph">Graphics</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="menu_about">About</string>
    <string name="nav_sigle">AM</string>
    <string name="nav_name">Activity Manager</string>
    <string name="fab_new_category">Category</string>
    <string name="status_home">Status</string>
    <string name="fab_new_activity">Activity</string>
    <string name="fab_new_event">Event</string>
    <string name="tv_name_category">Category name</string>
    <string name="tv_were_here">We are here!</string>
    <string name="tv_ok">OK</string>
    <string name="tv_add_category_sucess">Category added</string>
    <string name="tv_category">Categories</string>
    <string name="title">Title</string>
    <string name="dead_line">DeadLine</string>
    <string name="dead_line_home">DeadLine:</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_new">New</string>
    <string name="title_activity_categories">CategoriesActivity</string>
    <string name="title_activity_tasks">tasksActivity</string>


    <string name="delete">Remove</string>
    <string name="option_delete">Remove this Category</string>
    <string name="option_edit">Edit this Category</string>
    <string name="name_category">New name category</string>
    <string name="select_color_category">Select a color:</string>
    <string name="update_category">Update category</string>

    <string name="activity_name">Activity Name</string>
    <string name="activity_deadline">Set Deadline</string>
    <string name="activity_planned_hours">Planned Hours</string>
    <string name="activity_number_of_repetitions">Number of Repetitions</string>
    <string name="activity_number_of_repetitions_home">Number of Repetitions:</string>
    <string name="add_new_activity">Add New Activity</string>
    <string name="sucess_activity_added">Activity Added</string>
    <string name="update_activity">Update Activity</string>
    <string name="worked_hours_activity">Worked Hours</string>
    <string name="is_done">Finished?</string>


    <string name="cancel_picker">CANCEL</string>
    <string name="done_picker">DONE</string>

    <string name="add_category">Add Category</string>
    <string name="edit_category">Edit Category</string>
    <string name="remove_category">Remove Category</string>
    <string name="completed">Completed</string>
    <string name="plain_of_hour">Plano de horas</string>
    <string name="initial_date_event">Date Initial: </string>
    <string name="plain_of_hour_home">Plain of hour: </string>
    <string name="deadline">DeadLine:</string>
    <string name="final_date_event">Date Final:</string>
    <string name="about_dialog_text"></string>
    <string name="test">test</string>
    <string name="events_list">Events list</string>
    <string name="base_activity">Base Activity</string>
    <string name="activity_vision">Vision</string>
    <string name="activity_events">Events Associated</string>
    <string name="editing_category_activity">editing_category_activity</string>
    <string name="task_activity_detail">Activity</string>
    <string name="bt_set">Set</string>
    <string name="text_done">Done</string>
    <string name="text_cancel">Cancel</string>

    <string name="event_name">Event Name</string>
    <string name="event_initial_date">Initial date and Hour</string>
    <string name="event_set_initial_date">Set Initial Date</string>
    <string name="event_final_date">Final date and Hour</string>
    <string name="event_set_final_date">Set Final Date</string>
    <string name="add_event">Add Event</string>
    <string name="event_initial_hour">Initial Hour</string>
    <string name="event_set_initial_hour">Set Initial Hour</string>
    <string name="event_final_hour">Final Hour</string>
    <string name="event_set_final_hour">Set Final Hour</string>

    <string name="graphic_activity_title">Line Graphic: Worked Hours/Month</string>


</resources>
